--- a/charts/jenkins-x/jxboot-helmfile-resources/values.yaml
+++ b/charts/jenkins-x/jxboot-helmfile-resources/values.yaml
@@ -5,7 +5,7 @@ ingress:
     # such as
     #    hook: "myuniqueid.ngrok.io
     # so that webhooks from, say, github.com, will work to your local laptop
-    hook: ""
+    hook: "054629e0c0c9.ngrok.io"
 
 kaniko:
   # lets support insecure docker registries so that we
